force-app/main/default/objects/Activitys/fields/AccountReceivable__c.field-meta.xml
<CustomField>
    <fullName>AccountReceivable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to fill when Task is created for Payment Reminder</description>
    <label>Account Receivable</label>
    <type>Checkbox</type>
</CustomField>