force-app/main/default/objects/Activitys/fields/OrderAmount__c.field-meta.xml
<CustomField>
    <fullName>OrderAmount__c</fullName>
    <description>This Field Store the Total Amount of order</description>
    <formula>IF( AND( NOT( ISBLANK( Order__c ) ) , NOT( ISBLANK( Order__r.Total_Amount__c ) ) ), Order__r.Total_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>